Refactoring of base structure